fix: source icones arrow in collapse

--- a/kasa/src/styles/Collapse.scss
+++ b/kasa/src/styles/Collapse.scss
@@ -22,17 +22,19 @@
       justify-content: space-between;
       align-items: center;
       margin-top: 2em;
-      padding: 1em;
+      padding: 1.5em;
       flex-direction: row;
       border-radius: 3px;
       background-color: #ff6060;
       height: 2vh;
     }
     & .rules-button {
-      height: 20%;
-      color: white;
+      border: none;
+      background: none;
+      color: inherit;
       text-decoration: none;
-      border: 0px;
+      cursor: pointer;
+      outline: none;
     }
 
     & .rules-title {
@@ -40,7 +42,7 @@
       display: flex;
       color: white;
       font-weight: 700;
-      font-size: 1em;
+      font-size: 1.2em;
     }
 
     & .rules-content {
@@ -52,7 +54,5 @@
       padding: 30px;
       margin: 0;
     }
-
-  
   }
 }
